--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee" version="3.1">
 
+    <listener>
+        <listener-class>init.AppContextListener</listener-class>
+    </listener>
+
     <!-- Start of ilters/AuthenticationFilter -->
     <filter>
         <filter-name>authenticationfilter</filter-name>
