--- a/WEB-INF/config.properties
+++ b/WEB-INF/config.properties
@@ -1,5 +1,5 @@
 db.host=localhost
 db.port=3306
 db.user=root
-db.pass=your_password
-log.path=/
+db.pass=
+log.path=/mnt/wwn-0x5000c500c67d4454-part1/Server/apache-tomcat-9.0.98/webapps/FileStorage/Log/log.log
