Improve conf and enable changing app sub path (#9)
Improve conf and enable changing app sub path

---------

Co-authored-by: Abhineet <abhineet.hariharan@zohocorp.com>

--- a/WEB-INF/config.properties
+++ b/WEB-INF/config.properties
@@ -2,4 +2,4 @@ db.host=localhost
 db.port=3306
 db.user=root
 db.pass=
-log.path=/mnt/wwn-0x5000c500c67d4454-part1/Server/apache-tomcat-9.0.98/webapps/FileStorage/Log/log.log
+app.subpath=/
